k8s/task_26/pod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.21.3
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
            - name: default-page
              mountPath: /usr/share/nginx/html/
      volumes:
        - name: default-page
          configMap:
            name: my-config-html
        - name: nginx-config
          secret:
            secretName: nginx-config
