k8s/task_26/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  #namespace: vote
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31200
  type: NodePort
